# CS-394

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish-quarto.yml
site_libs/bootstrap/: bootstrap-4d8b594121dd52e54118692cc759f5c0.min.css  bootstrap-dark-567b30ad711c8693efb6495feb883fb3.min.css
src/00/: final-project.html  final-project.qmd  final-rubric-394.html  final-rubric-394.qmd  final-rubric-594.html  final-rubric-594.qmd  final-rubric.html  final-rubric.qmd  glossary.html  glossary.qmd  index.html  index.qmd  slides.html  slides.qmd  weekly-rubric.html  weekly-rubric.qmd  welcome.html  welcome.qmd
src/01/: GPT-2.html  GPT-2.ipynb  assignment.html  assignment.qmd  embeddings.html  embeddings.ipynb  hello-world.html  hello-world.ipynb  index.html  index.qmd  pyproject.toml  (+9 more)
src/04/: assignment.html  assignment.qmd  pyproject.toml  references.bib  resources.html  resources.qmd  slides.html  slides.qmd
src/04/code/pbr-viewer/: index.html
src/04/notebooks/: controlnet-openpose-sd-1.5.html  controlnet-openpose-sd-1.5.ipynb  depth-map-as-context.html  generate-depth-map.html  generate-depth-map.ipynb  image-to-image-sd-1.5.html  inpainting.html  inpainting.ipynb  outpainting.html  outpainting.ipynb  pbr-creator.html  text-to-image-replicate.html  text-to-image-replicate.ipynb  text-to-image-sd-1.5.html  text-to-image-sd-1.5.ipynb  text-to-image.html  text-to-image.ipynb  vlm-gemma-3-4b.html  vlm-gemma-3-4b.ipynb
theme/: digipen-ai.scss  digipen.scss
(+147 files in other folders)
