[project]
name = "04"
version = "0.1.0"
description = "Module 4 Demo Code"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "huggingface-hub>=0.36.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "protobuf>=6.33.4",
    "python-dotenv>=1.2.1",
    "replicate>=1.0.7",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
